--- a/docs/libraries/git/meta.yaml
+++ b/docs/libraries/git/meta.yaml
@@ -1,6 +1,6 @@
 name: git
 version: 0.1.0
-description: Git library for ry-next
+description: Git workflow with review tokens and commit validation
 author: fredrik
 created: '2025-09-10T10:03:08.717118'
 updated: '2025-09-10'
