--- a/docs/libraries/ry-lib/lib/templates/augmentation.yaml
+++ b/docs/libraries/ry-lib/lib/templates/augmentation.yaml
@@ -20,9 +20,9 @@ commands:
           target = "{{target}}"
           result = subprocess.run([target, '--version'], capture_output=True, text=True)
           if result.returncode == 0:
-              print(f"✅ {result.stdout.strip()}", file=sys.stderr)
+              print(f"SUCCESS: {result.stdout.strip()}", file=sys.stderr)
           else:
-              print(f"❌ Could not get version from {target}", file=sys.stderr)
+              print(f"ERROR: Could not get version from {target}", file=sys.stderr)
               sys.exit(1)
 
   validate:
@@ -40,10 +40,10 @@ commands:
           import sys
           
           if flags.get('dry-run'):
-              print("🔍 Preview mode - no changes will be made", file=sys.stderr)
+              print("INFO: Preview mode - no changes will be made", file=sys.stderr)
           
           # Add validation logic here
-          print("✅ Validation passed", file=sys.stderr)
+          print("SUCCESS: Validation passed", file=sys.stderr)
           
           if flags.get('verbose'):
               print("   All checks completed successfully", file=sys.stderr)
@@ -67,15 +67,15 @@ commands:
             
             # Pre-processing checks
             if not flags.get('force'):
-                print("📦 Processing with {{name}} augmentation...", file=sys.stderr)
+                print("BUILD: Processing with {{name}} augmentation...", file=sys.stderr)
             
             # Add your pre-processing logic here
             # For example: validate environment, check permissions, etc.
       
       after:
         - python: |
-            print("✅ Completed successfully", file=sys.stderr)
-            print("📝 Next: Review the results", file=sys.stderr)
+            print("SUCCESS: Completed successfully", file=sys.stderr)
+            print("INFO: Next: Review the results", file=sys.stderr)
 
   # Catch-all to relay other commands
   '*':
