--- a/docs/libraries/ry-lib/ry-lib.yaml
+++ b/docs/libraries/ry-lib/ry-lib.yaml
@@ -167,7 +167,7 @@ commands:
     
     execute:
       - shell: |
-          echo "📋 Updating registry..."
+          echo "BUILD: Updating registry..." >&2
       
       - python: |
           from registry_builder import build_registry
@@ -181,14 +181,14 @@ commands:
           if ! /usr/bin/git diff --quiet docs_next/libraries/; then
               /usr/bin/git add docs_next/libraries/
               /usr/bin/git commit -m "{{flags.message}}"
-              echo "✅ Committed changes"
+              echo "SUCCESS: Committed changes" >&2
               
               if [ "{{flags.push}}" = "True" ]; then
                   /usr/bin/git push
-                  echo "📤 Pushed to remote"
+                  echo "SUCCESS: Pushed to remote" >&2
               fi
           else
-              echo "ℹ️  No changes to publish"
+              echo "INFO: No changes to publish" >&2
           fi
 
   project:
@@ -209,15 +209,16 @@ commands:
               
               # Check if already exists
               if Path('project.yaml').exists() and not flags.get('force'):
-                  print("❌ project.yaml already exists", file=sys.stderr)
+                  print("ERROR: project.yaml already exists", file=sys.stderr)
                   print("   Use --force to overwrite", file=sys.stderr)
                   sys.exit(1)
               
               pm = ProjectManager()
               if pm.init_project(force=flags.get('force', False)):
-                  print("✅ Created project.yaml", file=sys.stderr)
-                  print("   Edit to customize metadata", file=sys.stderr)
-                  print("   Build site with: ry-next site-builder build", file=sys.stderr)
+                  print("SUCCESS: Created project.yaml", file=sys.stderr)
+                  print("INFO: Next steps:", file=sys.stderr)
+                  print("   1. Edit to customize metadata", file=sys.stderr)
+                  print("   2. ry-next site-builder build", file=sys.stderr)
               else:
                   sys.exit(1)
       
@@ -228,7 +229,7 @@ commands:
               from project_manager import ProjectManager
               
               if not Path('project.yaml').exists():
-                  print("❌ project.yaml not found", file=sys.stderr)
+                  print("ERROR: project.yaml not found", file=sys.stderr)
                   print("   Run: ry-next ry-lib project init", file=sys.stderr)
                   sys.exit(1)
               
@@ -237,12 +238,12 @@ commands:
                   changes = pm.sync_project()
                   if changes:
                       for change in changes:
-                          print(f"📝 {change}", file=sys.stderr)
-                      print("✅ project.yaml updated", file=sys.stderr)
+                          print(f"UPDATE: {change}", file=sys.stderr)
+                      print("SUCCESS: project.yaml updated", file=sys.stderr)
                   else:
-                      print("✅ project.yaml is up to date", file=sys.stderr)
+                      print("INFO: project.yaml is up to date", file=sys.stderr)
               except Exception as e:
-                  print(f"❌ Error: {e}", file=sys.stderr)
+                  print(f"ERROR: {e}", file=sys.stderr)
                   sys.exit(1)
       
       - when: "arguments.get('action') == 'validate'"
@@ -252,17 +253,17 @@ commands:
               from project_manager import ProjectManager
               
               if not Path('project.yaml').exists():
-                  print("❌ project.yaml not found", file=sys.stderr)
+                  print("ERROR: project.yaml not found", file=sys.stderr)
                   print("   Run: ry-next ry-lib project init", file=sys.stderr)
                   sys.exit(1)
               
               pm = ProjectManager()
               valid, errors = pm.validate_project()
               if valid:
-                  print("✅ project.yaml is valid", file=sys.stderr)
+                  print("SUCCESS: project.yaml is valid", file=sys.stderr)
               else:
                   for error in errors:
-                      print(f"❌ {error}", file=sys.stderr)
+                      print(f"ERROR: {error}", file=sys.stderr)
                   sys.exit(1)
       
       - when: "arguments.get('action') == 'show'"
@@ -272,7 +273,7 @@ commands:
               from project_manager import ProjectManager
               
               if not Path('project.yaml').exists():
-                  print("❌ project.yaml not found", file=sys.stderr)
+                  print("ERROR: project.yaml not found", file=sys.stderr)
                   print("   Run: ry-next ry-lib project init", file=sys.stderr)
                   sys.exit(1)
               
@@ -281,5 +282,5 @@ commands:
                   project = pm.show_project()
                   print(yaml.dump(project, default_flow_style=False, sort_keys=False))
               except Exception as e:
-                  print(f"❌ Error: {e}", file=sys.stderr)
+                  print(f"ERROR: {e}", file=sys.stderr)
                   sys.exit(1)
