--- a/docs/libraries/site-builder/site-builder.yaml
+++ b/docs/libraries/site-builder/site-builder.yaml
@@ -34,7 +34,7 @@ commands:
           
           config_file = flags.get('config', 'project.yaml')
           if not Path(config_file).exists():
-              print(f"❌ {config_file} not found", file=sys.stderr)
+              print(f"ERROR: {config_file} not found", file=sys.stderr)
               print("   Run: ry-next ry-lib project init", file=sys.stderr)
               sys.exit(1)
           
@@ -42,14 +42,15 @@ commands:
           theme = flags.get('theme', 'minimal')
           output = flags.get('output', 'docs')
           
-          print(f"📦 Building site from {config_file}...", file=sys.stderr)
+          print(f"BUILD: Building site from {config_file}...", file=sys.stderr)
           try:
               builder.build(config_file, output, theme)
-              print(f"✅ Site generated in {output}/index.html", file=sys.stderr)
+              print(f"SUCCESS: Site generated in {output}/index.html", file=sys.stderr)
               full_path = Path(output).resolve() / 'index.html'
-              print(f"   Open in browser: file://{full_path}", file=sys.stderr)
+              print(f"INFO: Open in browser: file://{full_path}", file=sys.stderr)
           except Exception as e:
-              print(f"❌ Build failed: {e}", file=sys.stderr)
+              print(f"ERROR: Build failed: {e}", file=sys.stderr)
+              print("   Check: project.yaml format and file paths", file=sys.stderr)
               sys.exit(1)
   
   clean:
@@ -71,6 +72,23 @@ commands:
           
           if index_file.exists():
               index_file.unlink()
-              print(f"✅ Removed {index_file}", file=sys.stderr)
+              print(f"SUCCESS: Removed {index_file}", file=sys.stderr)
           else:
-              print(f"ℹ️  No generated files to clean", file=sys.stderr)
+              print("INFO: No generated files to clean", file=sys.stderr)
+
+  default:
+    execute:
+      - python: |
+          print("site-builder - Static site generator from project.yaml manifests", file=sys.stderr)
+          print("Version: 0.1.0", file=sys.stderr)
+          print("Type: utility", file=sys.stderr)
+          print("", file=sys.stderr)
+          print("Commands:", file=sys.stderr)
+          print("  build        Generate static site from project.yaml", file=sys.stderr)
+          print("  clean        Remove generated site files", file=sys.stderr)
+          print("", file=sys.stderr)
+          print("Common workflow:", file=sys.stderr)
+          print("  ry-next ry-lib project init             # Create project.yaml", file=sys.stderr)
+          print("  ry-next site-builder build              # Generate site", file=sys.stderr)
+          print("  ry-next site-builder build --theme terminal  # Use terminal theme", file=sys.stderr)
+          print("  ry-next site-builder clean              # Remove generated files", file=sys.stderr)
