--- a/docs/libraries/uv/meta.yaml
+++ b/docs/libraries/uv/meta.yaml
@@ -1,6 +1,8 @@
 name: uv
 version: 0.1.0
-description: Uv library for ry-next
+description: Python package management with automated version workflows
 author: fredrik
 created: '2025-09-10T10:05:54.412596'
 updated: '2025-09-10'
+dependencies:
+  changelog: ">=0.1.0"
