--- a/docs/libraries/uv/uv.yaml
+++ b/docs/libraries/uv/uv.yaml
@@ -36,8 +36,9 @@ commands:
                 
                 # Check git status
                 if not check_git_clean():
-                    print("❌ Working directory not clean", file=sys.stderr)
-                    print("   Commit or stash changes first", file=sys.stderr)
+                    print("ERROR: Working directory not clean", file=sys.stderr)
+                    print("   Fix: git add -A && git commit", file=sys.stderr)
+                    print("   Or stash: git stash", file=sys.stderr)
                     sys.exit(1)
                 
                 # Check CHANGELOG has content to release
@@ -46,24 +47,24 @@ commands:
                 
                 if Path('CHANGELOG.md').exists():
                     if not has_unreleased_content():
-                        print("⚠️  CHANGELOG.md has no unreleased changes", file=sys.stderr)
+                        print("WARNING: CHANGELOG.md has no unreleased changes", file=sys.stderr)
                         print("   Add changes under [Unreleased] before bumping", file=sys.stderr)
                 else:
-                    print("⚠️  No CHANGELOG.md found", file=sys.stderr)
+                    print("WARNING: No CHANGELOG.md found", file=sys.stderr)
                 
                 # Get package info for display
                 package = flags.get('package')
                 version, package_name = get_current_version(package)
                 bump_type = flags.get('bump', 'patch')
                 
-                print(f"📦 Preview: {package_name} version bump ({bump_type})", file=sys.stderr)
+                print(f"REVIEW: {package_name} version bump ({bump_type})", file=sys.stderr)
                 
                 # Check for changelog
                 changelog = check_changelog_exists(package)
                 if changelog:
-                    print(f"📝 Will update: {changelog}", file=sys.stderr)
+                    print(f"INFO: Will update: {changelog}", file=sys.stderr)
                 else:
-                    print("⚠️  No CHANGELOG.md found", file=sys.stderr)
+                    print("WARNING: No CHANGELOG.md found", file=sys.stderr)
           
           relay: native  # Let uv show "0.1.0 => 0.1.1"
           
@@ -82,7 +83,7 @@ commands:
                 tm = TokenManager("uv")
                 token, expires = tm.generate_token(f"bump {package_name} {bump_type}")
                 
-                print(f"\n📋 BUMP_TOKEN={token}", file=sys.stderr)
+                print(f"REVIEW: BUMP_TOKEN={token}", file=sys.stderr)
                 print(f"   Expires in {expires} seconds", file=sys.stderr)
                 
                 # Build the command without --dry-run
@@ -102,11 +103,11 @@ commands:
                 token = os.environ.get('BUMP_TOKEN', '')
                 
                 if not token:
-                    print("❌ Preview version changes first", file=sys.stderr)
+                    print("ERROR: Preview version changes first", file=sys.stderr)
                     bump_type = flags.get('bump', 'patch')
                     package = flags.get('package')
                     
-                    cmd_parts = ['uv', 'version', '--bump', bump_type, '--dry-run']
+                    cmd_parts = ['ry-next', 'uv', 'version', '--bump', bump_type, '--dry-run']
                     if package:
                         cmd_parts.extend(['--package', package])
                     print(f"   Run: {' '.join(cmd_parts)}", file=sys.stderr)
@@ -117,11 +118,11 @@ commands:
                 
                 tm = TokenManager("uv")
                 if not tm.verify_token(token):
-                    print("❌ Invalid or expired token", file=sys.stderr)
-                    print("   Run with --dry-run first to get a new token", file=sys.stderr)
+                    print("ERROR: Invalid or expired token", file=sys.stderr)
+                    print("   Run: ry-next uv version --bump patch --dry-run", file=sys.stderr)
                     sys.exit(1)
                 
-                print("✅ Bump token verified", file=sys.stderr)
+                print("SUCCESS: Bump token verified", file=sys.stderr)
                 
                 # Check CHANGELOG has unreleased content
                 from pathlib import Path
@@ -129,18 +130,19 @@ commands:
                 
                 if Path('CHANGELOG.md').exists():
                     if not has_unreleased_content():
-                        print("❌ CHANGELOG.md has no unreleased changes", file=sys.stderr)
+                        print("ERROR: CHANGELOG.md has no unreleased changes", file=sys.stderr)
                         print("   Add your changes under [Unreleased] section", file=sys.stderr)
                         print("   Or run: ry-next changelog validate", file=sys.stderr)
                         sys.exit(1)
                     
-                    print("✅ CHANGELOG has unreleased content", file=sys.stderr)
+                    print("SUCCESS: CHANGELOG has unreleased content", file=sys.stderr)
                 
                 # Check git clean
                 from version_workflow import check_git_clean
                 
                 if not check_git_clean():
-                    print("❌ Working directory not clean", file=sys.stderr)
+                    print("ERROR: Working directory not clean", file=sys.stderr)
+                    print("   Fix: git add -A && git commit", file=sys.stderr)
                     sys.exit(1)
                 
                 # Store old version for later
@@ -166,18 +168,18 @@ commands:
                 new_version, package_name = get_current_version(package)
                 old_version = env.get('RY_OLD_VERSION', '0.0.0')
                 
-                print(f"📦 Bumped {package_name}: {old_version} → {new_version}", file=sys.stderr)
+                print(f"SUCCESS: Bumped {package_name}: {old_version} → {new_version}", file=sys.stderr)
                 
                 # Update changelog if exists
                 changelog = check_changelog_exists(package)
                 if changelog:
                     if release_changelog(new_version, changelog):
-                        print(f"📝 Updated changelog for {new_version}", file=sys.stderr)
+                        print(f"SUCCESS: Updated changelog for {new_version}", file=sys.stderr)
                     else:
-                        print(f"⚠️  Could not update changelog", file=sys.stderr)
+                        print(f"WARNING: Could not update changelog", file=sys.stderr)
                 
                 # Sync dependencies
-                print("🔄 Syncing dependencies...", file=sys.stderr)
+                print("UPDATE: Syncing dependencies...", file=sys.stderr)
                 subprocess.run(['/usr/bin/uv', 'sync', '--quiet'], check=False)
                 
                 # Commit and tag
@@ -195,7 +197,8 @@ commands:
                 result = subprocess.run(['/usr/bin/git', 'status', '--porcelain'], 
                                       capture_output=True, text=True)
                 if result.stdout.strip():
-                    print("❌ Working directory not clean", file=sys.stderr)
+                    print("ERROR: Working directory not clean", file=sys.stderr)
+                    print("   Fix: git add -A && git commit", file=sys.stderr)
                     sys.exit(1)
           
           relay: native
@@ -222,7 +225,7 @@ commands:
                     subprocess.run(['/usr/bin/git', 'add', '-A'], check=False)
                     subprocess.run(['/usr/bin/git', 'commit', '-m', 
                                   f'chore({name}): set version to {version}'], check=False)
-                    print(f"✅ Version set to {version}", file=sys.stderr)
+                    print(f"SUCCESS: Version set to {version}", file=sys.stderr)
       
       # Default: just show version (relay all other flags like --output-format json)
       - default:
@@ -243,7 +246,7 @@ commands:
             result = subprocess.run(['/usr/bin/git', 'status', '--porcelain'],
                                   capture_output=True, text=True)
             if result.stdout.strip():
-                print("⚠️  Building from dirty working tree", file=sys.stderr)
+                print("WARNING: Building from dirty working tree", file=sys.stderr)
                 print("   Uncommitted changes may be included", file=sys.stderr)
             
             # Check if dist is empty
@@ -253,14 +256,14 @@ commands:
                 dist_dir = Path(f'packages/{flags.get("package")}/dist')
             
             if dist_dir.exists() and list(dist_dir.glob('*')):
-                print(f"❌ {dist_dir} is not empty", file=sys.stderr)
-                print(f"   Clean with: rm -rf {dist_dir}/*", file=sys.stderr)
+                print(f"ERROR: {dist_dir} is not empty", file=sys.stderr)
+                print(f"   Fix: rm -rf {dist_dir}/*", file=sys.stderr)
                 sys.exit(1)
       
       after:
         - shell: |
-            echo "✅ Build complete" >&2
-            echo "   Next: uv publish --dry-run" >&2
+            echo "SUCCESS: Build complete" >&2
+            echo "INFO: Next: ry-next uv publish --dry-run" >&2
 
   # Publish with token-based safety
   publish:
@@ -280,10 +283,10 @@ commands:
                 ready, error = check_publish_requirements(package)
                 
                 if not ready:
-                    print(f"❌ Not ready to publish: {error}", file=sys.stderr)
+                    print(f"ERROR: Not ready to publish: {error}", file=sys.stderr)
                     sys.exit(1)
                 
-                print("✅ Ready to publish", file=sys.stderr)
+                print("SUCCESS: Ready to publish", file=sys.stderr)
                 
                 # Check for PyPI token - try pass if not in env
                 if not env.get('UV_PUBLISH_TOKEN'):
@@ -291,9 +294,9 @@ commands:
                     result = subprocess.run(['pass', 'pypi/uv-publish'], 
                                           capture_output=True, text=True)
                     if result.returncode == 0:
-                        print("🔑 Will use PyPI token from pass", file=sys.stderr)
+                        print("AUTH: Will use PyPI token from pass", file=sys.stderr)
                     else:
-                        print("⚠️  No UV_PUBLISH_TOKEN set and pass pypi/uv-publish not found", file=sys.stderr)
+                        print("WARNING: No UV_PUBLISH_TOKEN set and pass pypi/uv-publish not found", file=sys.stderr)
                         print("   Set with: export UV_PUBLISH_TOKEN=pypi-...", file=sys.stderr)
                         print("   Or store in pass: pass insert pypi/uv-publish", file=sys.stderr)
           
@@ -307,11 +310,11 @@ commands:
                 tm = TokenManager("uv")
                 token, expires = tm.generate_token("publish to PyPI")
                 
-                print(f"\n📋 PUBLISH_TOKEN={token}", file=sys.stderr)
+                print(f"REVIEW: PUBLISH_TOKEN={token}", file=sys.stderr)
                 print(f"   Expires in {expires} seconds", file=sys.stderr)
                 
                 # Build command without --dry-run
-                cmd_parts = ['PUBLISH_TOKEN=' + token, 'uv', 'publish']
+                cmd_parts = ['PUBLISH_TOKEN=' + token, 'ry-next', 'uv', 'publish']
                 # Add package flag if present
                 if flags.get('package'):
                     cmd_parts.extend(['--package', flags.get('package')])
@@ -330,8 +333,8 @@ commands:
                 token = os.environ.get('PUBLISH_TOKEN', '')
                 
                 if not token:
-                    print("❌ Verify publish requirements first", file=sys.stderr)
-                    print("   Run: uv publish --dry-run", file=sys.stderr)
+                    print("ERROR: Verify publish requirements first", file=sys.stderr)
+                    print("   Run: ry-next uv publish --dry-run", file=sys.stderr)
                     print("   Then use the PUBLISH_TOKEN provided", file=sys.stderr)
                     sys.exit(1)
                 
@@ -339,11 +342,11 @@ commands:
                 
                 tm = TokenManager("uv")
                 if not tm.verify_token(token):
-                    print("❌ Invalid or expired token", file=sys.stderr)
-                    print("   Run: uv publish --dry-run", file=sys.stderr)
+                    print("ERROR: Invalid or expired token", file=sys.stderr)
+                    print("   Run: ry-next uv publish --dry-run", file=sys.stderr)
                     sys.exit(1)
                 
-                print("✅ Publish token verified", file=sys.stderr)
+                print("SUCCESS: Publish token verified", file=sys.stderr)
                 
                 # Ensure PyPI token is set - try pass if not in env
                 if not env.get('UV_PUBLISH_TOKEN'):
@@ -353,9 +356,9 @@ commands:
                                           capture_output=True, text=True)
                     if result.returncode == 0:
                         os.environ['UV_PUBLISH_TOKEN'] = result.stdout.strip()
-                        print("🔑 Retrieved PyPI token from pass", file=sys.stderr)
+                        print("AUTH: Retrieved PyPI token from pass", file=sys.stderr)
                     else:
-                        print("❌ UV_PUBLISH_TOKEN not set and pass pypi/uv-publish not found", file=sys.stderr)
+                        print("ERROR: UV_PUBLISH_TOKEN not set and pass pypi/uv-publish not found", file=sys.stderr)
                         print("   Set with: export UV_PUBLISH_TOKEN=pypi-...", file=sys.stderr)
                         print("   Or store in pass: pass insert pypi/uv-publish", file=sys.stderr)
                         sys.exit(1)
@@ -364,6 +367,8 @@ commands:
           
           after:
             - shell: |
-                echo "🎉 Published successfully!" >&2
+                echo "SUCCESS: Published successfully!" >&2
 
-  # All other uv commands automatically relay to native uv
+# Default case for all unmatched commands - pass through to uv
+default:
+  relay: native
