refactor: complete migration from ry-next to ry
Major refactoring completing the transition from experimental ry-next
back to production ry naming:

- Renamed all ry-next references to ry throughout codebase
- Consolidated documentation, removing redundant README files
- Added comprehensive ARCHITECTURE.md documentation
- Updated OUTPUT_STYLE_GUIDE to ASCII-only format
- Fixed library paths and references in all YAML files
- Updated wrapper scripts in ~/.local/bin/guards/
- Added release-workflow command for automated releases
- Cleaned up library documentation and examples

This establishes ry as the canonical command name and prepares
for the v1.2.0 release with a cleaner, more maintainable structure.

--- a/docs/libraries/changelog/changelog.yaml
+++ b/docs/libraries/changelog/changelog.yaml
@@ -4,10 +4,10 @@ type: utility
 description: Simple changelog initialization and release management
 
 workflows:
-  - "ry-next changelog init                   # Create CHANGELOG.md"
-  - "ry-next changelog show --unreleased      # View pending changes"
-  - "ry-next changelog release 1.0.0          # Convert Unreleased to version"
-  - "ry-next changelog validate               # Check format"
+  - "ry changelog init                   # Create CHANGELOG.md"
+  - "ry changelog show --unreleased      # View pending changes"
+  - "ry changelog release 1.0.0          # Convert Unreleased to version"
+  - "ry changelog validate               # Check format"
 
 commands:
   init:
@@ -72,7 +72,7 @@ commands:
           changelog = Path('CHANGELOG.md')
           if not changelog.exists():
               print("ERROR: CHANGELOG.md not found", file=sys.stderr)
-              print("   Run: ry-next changelog init", file=sys.stderr)
+              print("   Run: ry changelog init", file=sys.stderr)
               sys.exit(1)
           
           with open(changelog) as f:
@@ -119,7 +119,7 @@ default:
         print("  show        Display current CHANGELOG.md", file=sys.stderr)
         print("", file=sys.stderr)
         print("Common workflow:", file=sys.stderr)
-        print("  ry-next changelog init                   # Create CHANGELOG.md", file=sys.stderr)
-        print("  ry-next changelog show --unreleased      # View pending changes", file=sys.stderr)
-        print("  ry-next changelog release 1.0.0          # Convert Unreleased to version", file=sys.stderr)
-        print("  ry-next changelog validate               # Check format", file=sys.stderr)
+        print("  ry changelog init                   # Create CHANGELOG.md", file=sys.stderr)
+        print("  ry changelog show --unreleased      # View pending changes", file=sys.stderr)
+        print("  ry changelog release 1.0.0          # Convert Unreleased to version", file=sys.stderr)
+        print("  ry changelog validate               # Check format", file=sys.stderr)
