--- a/docs/libraries/changelog/meta.yaml
+++ b/docs/libraries/changelog/meta.yaml
@@ -1,6 +1,6 @@
 name: changelog
 version: 0.1.0
-description: Changelog library for ry-next
+description: Changelog library for ry
 author: fredrik
 created: '2025-09-10T09:52:42.153152'
 updated: '2025-09-10'
