--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ry-next = "ry_tool.app:run"
+ry = "ry_tool.app:run"
 
 [build-system]
 requires = ["uv_build>=0.8.13,<0.9.0"]
