--- a/docs/libraries/uv/meta.yaml
+++ b/docs/libraries/uv/meta.yaml
@@ -1,8 +1,9 @@
 name: uv
-version: 0.1.0
+version: 0.2.0
 description: Python package management with automated version workflows
 author: fredrik
 created: '2025-09-10T10:05:54.412596'
-updated: '2025-09-10'
+updated: '2025-09-11'
 dependencies:
   changelog: ">=0.1.0"
+  git: ">=0.1.0"
